Make some fixes on mobile

--- a/src/components/Solutions/Sections/CarouselSection/styles.module.less
+++ b/src/components/Solutions/Sections/CarouselSection/styles.module.less
@@ -16,6 +16,7 @@
 
   li {
     height: 100%;
+    width: 100%;
     list-style: none;
   }
 }
@@ -29,7 +30,7 @@
   border-radius: 16px;
   padding: 32px;
   height: 100%;
-  min-width: 480px;
+  min-width: 200px;
 
   h3,
   span {
@@ -42,6 +43,7 @@
 
   p {
     color: var(--light-grey);
+    margin-bottom: auto;
   }
 
   span {
