--- a/src/components/Solutions/Sections/Hero/styles.module.less
+++ b/src/components/Solutions/Sections/Hero/styles.module.less
@@ -8,6 +8,6 @@
   div {
     max-width: 536px;
     max-height: 356px;
-    margin: auto;
+    margin-left: auto;
   }
 }
