--- a/src/components/Solutions/Sections/OneTitleThreeCards/Card/styles.module.less
+++ b/src/components/Solutions/Sections/OneTitleThreeCards/Card/styles.module.less
@@ -15,11 +15,4 @@
     margin: 0;
     margin-bottom: auto;
   }
-
-  @media (max-width: 524px) {
-    flex-direction: column-reverse;
-    align-items: flex-start;
-    padding: 24px;
-    gap: 12px;
-  }
 }
