--- a/src/components/Solutions/Sections/OneTitleThreeCards/styles.module.less
+++ b/src/components/Solutions/Sections/OneTitleThreeCards/styles.module.less
@@ -8,7 +8,7 @@
 
   ul {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     gap: 48px;
     margin: 0;
   }
